[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "dmytro",email = "dziumanenkod@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium (>=4.29.0,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pymongo (>=4.11.2,<5.0.0)",
    "environs (>=14.1.1,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"



[tool.black]
line-length = 90

